--- a/juego2/app/src/main/res/layout/activity_juego.xml
+++ b/juego2/app/src/main/res/layout/activity_juego.xml
@@ -64,8 +64,8 @@
     <ProgressBar
         android:id="@+id/proBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:max="100"
