--- a/PracticaJuego1AngelSalasCalvo/app/src/main/res/values/colors.xml
+++ b/PracticaJuego1AngelSalasCalvo/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#b2785b</color>
+    <color name="colorPrimaryDark">#503b17</color>
+    <color name="colorAccent">#688c7d</color>
+    <color name="grisTexto">#757575</color>
 </resources>
