--- a/juego2/app/src/main/res/layout/activity_juego.xml
+++ b/juego2/app/src/main/res/layout/activity_juego.xml
@@ -12,10 +12,11 @@
         android:layout_width="245dp"
         android:layout_height="42dp"
         android:layout_marginTop="60dp"
+        android:gravity="center"
         android:textAlignment="center"
+        android:textColorLink="@color/design_default_color_primary_dark"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,9 +25,10 @@
     <Button
         android:id="@+id/btn1"
         android:layout_width="110dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/btn2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvFase" />
@@ -34,9 +36,10 @@
     <Button
         android:id="@+id/btn2"
         android:layout_width="110dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn1"
         app:layout_constraintTop_toBottomOf="@+id/tvFase" />
@@ -44,9 +47,10 @@
     <Button
         android:id="@+id/btn3"
         android:layout_width="110dp"
-        android:layout_height="60dp"
+        android:layout_height="110dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/btn4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn1" />
@@ -54,9 +58,10 @@
     <Button
         android:id="@+id/btn4"
         android:layout_width="110dp"
-        android:layout_height="60dp"
+        android:layout_height="110dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/btn2" />
@@ -77,10 +82,10 @@
         android:id="@+id/tvNombre"
         android:layout_width="216dp"
         android:layout_height="42dp"
-        android:layout_marginTop="8dp"
-        android:textAlignment="center"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textAlignment="center"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -92,9 +97,9 @@
         android:layout_width="245dp"
         android:layout_height="42dp"
         android:layout_marginTop="24dp"
-        android:textAlignment="center"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textAlignment="center"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
