--- a/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/activity_main.xml
+++ b/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/lySwitchs"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/lyRecord">
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/swSonar"
@@ -29,10 +29,10 @@
             android:checked="true"
             android:textAlignment="textStart"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/bJugar" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvSonar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -51,10 +51,10 @@
             android:checked="true"
             android:textAlignment="textStart"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/bJugar" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvVibrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -68,54 +68,54 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/lyRecord"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
+        app:layout_constraintTop_toBottomOf="@+id/ivLogo">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="46dp"
+            android:id="@+id/ivIcono"
+            android:layout_width="36dp"
             android:layout_height="42dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
+            app:layout_constraintEnd_toStartOf="@+id/tvRecord"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/copa"
             tools:layout_editor_absoluteY="447dp" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tvRecord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/record"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintBottom_toBottomOf="@+id/ivIcono"
             app:layout_constraintEnd_toStartOf="@+id/tvRecordNom"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+            app:layout_constraintStart_toEndOf="@+id/ivIcono"
+            app:layout_constraintTop_toTopOf="@+id/ivIcono" />
 
         <TextView
             android:id="@+id/tvRecordNom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:paddingStart="20dp"
+            android:paddingStart="10dp"
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintBottom_toBottomOf="@+id/ivIcono"
             app:layout_constraintEnd_toStartOf="@+id/tvRecordNum"
-            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+            app:layout_constraintTop_toTopOf="@+id/ivIcono" />
 
         <TextView
             android:id="@+id/tvRecordNum"
@@ -123,14 +123,14 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView3"
+            app:layout_constraintBottom_toBottomOf="@+id/ivIcono"
+            app:layout_constraintTop_toTopOf="@+id/ivIcono"
             tools:layout_editor_absoluteX="318dp" />
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/bJugar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -141,10 +141,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/lySwitchs" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bInfo"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
@@ -155,14 +155,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/bJugar" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ivLogo"
         android:layout_width="0dp"
         android:layout_height="90dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +170,7 @@
         app:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/ivDecorado"
         android:layout_width="121dp"
         android:layout_height="84dp"
         android:layout_marginStart="32dp"
@@ -180,7 +180,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.957"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/bInfo"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/portada" />
 
@@ -192,10 +192,10 @@
         android:layout_marginEnd="8dp"
         android:text="@string/nombre"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintBottom_toBottomOf="@+id/ivDecorado"
+        app:layout_constraintEnd_toStartOf="@+id/ivDecorado"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/ivDecorado"
         app:layout_constraintVertical_bias="0.8" />
 
 </android.support.constraint.ConstraintLayout>
