--- a/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/activity_juego.xml
+++ b/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/activity_juego.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/f1"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageButton
             android:id="@+id/ibSiguiente"
@@ -105,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/f"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/tvCuentaAtras"
@@ -114,7 +114,7 @@
             android:fontFamily="@font/bangerss"
             android:text="0"
             android:textAlignment="center"
-            android:textSize="50sp"
+            android:textSize="70sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvTituloCuenta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
