--- a/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/dialogo_info.xml
+++ b/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/dialogo_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txt4"
+        android:id="@+id/tvTexto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -16,10 +16,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />
 
     <TextView
-        android:id="@+id/txt"
+        android:id="@+id/tvTitulo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
