--- a/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/dialogo_tiempo.xml
+++ b/PracticaJuego2AngelSalasCalvo/app/src/main/res/layout/dialogo_tiempo.xml
@@ -5,25 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="horizontal"></LinearLayout>
-
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivIcono"
         android:layout_width="89dp"
         android:layout_height="66dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/tvTituloRecord"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/tiempo" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTituloRecord"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -33,11 +28,11 @@
         android:textAlignment="center"
         android:textColor="#61949a"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/ivIcono"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/ivIcono"
+        app:layout_constraintTop_toTopOf="@+id/ivIcono" />
 
     <TextView
         android:id="@+id/tvPuntosOb"
@@ -49,9 +44,9 @@
         android:fontFamily="@font/bangerss"
         android:text="0 Puntos"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ivIcono" />
 </android.support.constraint.ConstraintLayout>
