--- a/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/activity_juego.xml
+++ b/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/activity_juego.xml
@@ -29,6 +29,70 @@
     </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/lyOcultoCohetes"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/fondo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.example.rutil.practicajuegofinalangelsalascalvo.BarraCohete
+            android:id="@+id/bcOcJugador1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:clickable="false"
+            android:max="1000"
+            android:paddingStart="60dp"
+            android:paddingEnd="60dp"
+            android:thumb="@drawable/coheteo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bcJugador2"
+            app:layout_constraintStart_toEndOf="@+id/bcAstronauta"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.example.rutil.practicajuegofinalangelsalascalvo.BarraCohete
+            android:id="@+id/bcOcAstronauta"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:clickable="false"
+            android:max="1000"
+            android:paddingStart="80dp"
+            android:paddingEnd="80dp"
+            android:thumb="@drawable/asytro"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.example.rutil.practicajuegofinalangelsalascalvo.BarraCohete
+            android:id="@+id/bcOcJugador2"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:clickable="false"
+            android:max="1000"
+            android:paddingStart="60dp"
+            android:paddingEnd="60dp"
+            android:thumb="@drawable/coheteo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/lyCohetes"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -41,36 +105,51 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.example.rutil.practicajuegofinalangelsalascalvo.BarraCohete
-            android:id="@+id/bcAstronauta"
-            android:layout_width="36dp"
+            android:id="@+id/bcJugador1"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
+            android:clickable="false"
+            android:max="1000"
+            android:paddingStart="60dp"
+            android:paddingEnd="60dp"
+            android:thumb="@drawable/cohete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bcJugador2"
-            app:layout_constraintStart_toEndOf="@+id/bcJugador1"
+            app:layout_constraintStart_toEndOf="@+id/bcAstronauta"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.example.rutil.practicajuegofinalangelsalascalvo.BarraCohete
-            android:id="@+id/bcJugador1"
-            android:layout_width="36dp"
+            android:id="@+id/bcAstronauta"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
+            android:clickable="false"
+            android:max="1000"
+            android:paddingStart="80dp"
+            android:paddingEnd="80dp"
+            android:thumb="@drawable/asytro"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.example.rutil.practicajuegofinalangelsalascalvo.BarraCohete
             android:id="@+id/bcJugador2"
-            android:layout_width="36dp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
+            android:clickable="false"
+            android:max="1000"
+            android:paddingStart="60dp"
+            android:paddingEnd="60dp"
+            android:thumb="@drawable/cohete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -85,26 +164,108 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <ImageButton
-            android:id="@+id/ibJugador1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/lyBotonJ1"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/jRojo"
-            android:padding="15dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/boton" />
+            android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/ibJugador2"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/ivBotonJug1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/jRojo"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/boton" />
+
+            <TextView
+                android:id="@+id/tvNomJ1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/jRojo"
+                android:paddingBottom="5dp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyBotonJ2"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/jAzul"
-            android:padding="15dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/boton" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivBotonJug2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/jAzul"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/boton" />
+
+            <TextView
+                android:id="@+id/tvNomJ2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="@color/jAzul"
+                android:paddingBottom="5dp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvMarcadorJ1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:text="0"
+        android:textColor="@android:color/background_light"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvMarcadorJ2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:text="0"
+        android:textColor="@android:color/background_light"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/midiendo"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvMarcadorJ1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01999998" />
 
 </android.support.constraint.ConstraintLayout>
