--- a/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/dialogo_ajustes.xml
+++ b/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/dialogo_ajustes.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tvTitulo"
+        android:id="@+id/tvTituloGanador"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -72,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTxt2">
+        app:layout_constraintTop_toBottomOf="@+id/tvTxt">
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/swSonido"
@@ -130,10 +130,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTituloGanador" />
 
     <TextView
-        android:id="@+id/tvTxt2"
+        android:id="@+id/tvTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
