--- a/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/activity_juego.xml
+++ b/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/activity_juego.xml
@@ -47,12 +47,13 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
+            android:progressDrawable="@drawable/ocultar_barra"
             android:layout_marginBottom="0dp"
             android:clickable="false"
             android:max="1000"
             android:paddingStart="60dp"
             android:paddingEnd="60dp"
-            android:thumb="@drawable/coheteo"
+            android:thumb="@drawable/cohete_r_oc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bcJugador2"
             app:layout_constraintStart_toEndOf="@+id/bcAstronauta"
@@ -63,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="0dp"
+            android:progressDrawable="@drawable/ocultar_barra"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
             android:clickable="false"
@@ -79,6 +81,7 @@
             android:id="@+id/bcOcJugador2"
             android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:progressDrawable="@drawable/ocultar_barra"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
@@ -86,7 +89,7 @@
             android:max="1000"
             android:paddingStart="60dp"
             android:paddingEnd="60dp"
-            android:thumb="@drawable/coheteo"
+            android:thumb="@drawable/cohete_a_oc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -109,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="0dp"
+            android:progressDrawable="@drawable/ocultar_barra"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
@@ -116,7 +120,7 @@
             android:max="1000"
             android:paddingStart="60dp"
             android:paddingEnd="60dp"
-            android:thumb="@drawable/cohete"
+            android:thumb="@drawable/cohete_r_off"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bcJugador2"
             app:layout_constraintStart_toEndOf="@+id/bcAstronauta"
@@ -126,14 +130,15 @@
             android:id="@+id/bcAstronauta"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:progressDrawable="@drawable/ocultar_barra"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
             android:clickable="false"
             android:max="1000"
-            android:paddingStart="80dp"
-            android:paddingEnd="80dp"
-            android:thumb="@drawable/asytro"
+            android:paddingStart="60dp"
+            android:paddingEnd="60dp"
+            android:thumb="@drawable/astronauta"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -143,13 +148,14 @@
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"
+            android:progressDrawable="@drawable/ocultar_barra"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
             android:clickable="false"
             android:max="1000"
             android:paddingStart="60dp"
             android:paddingEnd="60dp"
-            android:thumb="@drawable/cohete"
+            android:thumb="@drawable/cohete_a_off"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
